fix nav overflow bug

--- a/assets/css/rtl-style.css
+++ b/assets/css/rtl-style.css
@@ -2780,7 +2780,7 @@ ul.breadcrumb {
   top: 0;
   left: -300px;
   visibility: hidden;
-  overflow: scroll;
+  overflow: auto;
   float: left;
   background-color: white;
   padding: 20px;
