--- a/assets/sass/4_blocks/_main-nav.scss
+++ b/assets/sass/4_blocks/_main-nav.scss
@@ -30,7 +30,7 @@
     top: 0;
     left: -300px;
     visibility: hidden;
-    overflow: scroll;
+    overflow: auto;
     float: left;
     background-color: white;
     padding: $base-spacing;
